# server/api/controllers/dbs.js
@@ -1,31 +1,57 @@
 module.exports = {
-  resources: [
-      {
-          "owner": "Gilad",
-          "requirements": {
-              "kosher": true,
-              "gender": "male",
-              "languages": [
-                  "hebrew"
-              ],
-              "preferences": "Anybody but Yonathan Amir thanks."
-          },
-          "approved": false,
-          "id": "0"
-      },
-      {
-          "owner": "Yonathan",
-          "requirements": {
-              "kosher": false,
-              "gender": "female",
-              "languages": [
-                  "hebrew",
-                  "english"
-              ],
-              "preferences": "I'm only here for Gilad, tell him I'm sorry and I love HIM thanks."
-          },
-          "approved": true,
-          "id": "1"
-      }
-  ]
+    resources: [
+        {
+            "owner": "Gilad",
+            "requirements": {
+                "kosher": true,
+                "gender": "male",
+                "languages": [
+                    "hebrew"
+                ],
+                "preferences": "Anybody but Yonathan Amir thanks."
+            },
+            "approved": false,
+            "id": "0"
+        },
+        {
+            "owner": "Yonathan",
+            "requirements": {
+                "kosher": false,
+                "gender": "female",
+                "languages": [
+                    "hebrew",
+                    "english"
+                ],
+                "preferences": "I'm only here for Gilad, tell him I'm sorry and I love HIM thanks."
+            },
+            "approved": true,
+            "id": "1"
+        }
+    ],
+    owners: [
+        {
+            "contact": {
+                "name": "Gilad",
+                "phone": "0546940003",
+                "mail": "gilad94s@gmail.com",
+                "city": "Har Adar",
+                "address": "75 Hagay st."
+            },
+            "username": "gilad94s",
+            "password": "meleh",
+            "id": "0"
+        },
+        {
+            "contact": {
+                "name": "Yonathan",
+                "phone": "0503936006",
+                "mail": "tunamir18@gmail.com",
+                "city": "Kfar Saba",
+                "address": "14 Emek Zvulun st."
+            },
+            "username": "yonathana",
+            "password": "efes",
+            "id": "1"
+        }
+    ]
 };
